fix z-index

--- a/gkit/src/components/select/style.less
+++ b/gkit/src/components/select/style.less
@@ -124,7 +124,7 @@
 .gkit-select-dropdown {
   padding: 0.25rem;
   position: absolute;
-  z-index: 1;
+  z-index: var(--gkit-modal-z-index);
   background: var(--gkit-color-neutral-0);
   border-radius: 0.75rem;
   margin-top: 5px;
